# EndDev

./: .gitignore  FIRST_TIME_SETUP.md  FIX_VENV_PYTHON.md  SETUP_FIX.md  auth_guard.php  check_table.php  check_venv.py  db_connection.php  migrate_passwords.php  pyproject.toml  show_table_info.php  startup_new.php
EndDev/: db_connection.php  db_connection_api.php  diagnose_table.php  emergency_fix_table.php  fix_dtr_table.php  git config --global user.name maniegokryz  insert_test_dtr_data.php  simple_check.php
attendancerep/: attendancerep.css  attendancerep.js  attendancerep.php  attendancerep_old.php  exporep.php  export_individual.php  indirep.php  indirep_sqlite.php
dashboard/: dashboard.css  dashboard.js  dashboard.php  get_attendance_feed.php  get_attendance_records.php  get_late_today.php
documentation/: AUTHENTICATION_SYSTEM.md  OFFLINE_SUPPORT.md  PERFORMANCE_METRICS_DOCUMENTATION.md
faceid/: Kiosk_faceid.py  attendance_logger.py  attendance_logging.py  check_opencv.py  daily_attendance_initializer.py  debug_schedule_order.py  embd_up.py  start_kiosk.py  start_kiosk_admin.bat  sync_manager.py  sync_profile_pictures.py  test_late_calculation.py  test_opencv_gui.py
login/: auth.php  login.js  login.php  password_recovery.php  reset_password.php  session_check.php  setup_accounts.php  test_auth.php  view_accounts.php
settings/: check_session.php  emploarc.php  settings.css  settings.php  test_leave_simple.php
staffmanagement/: check_archive_table.php  check_leave_database.php  create_archive_table.php  edit_employee.php  generate_face_embeddings.py  (+13 more)
(+54 files in other folders)
