[project]
name = "face-recognition-attendance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.3",
    "huggingface-hub>=1.0.1",
    "insightface>=0.7.3",
    "mysql-connector-python==9.5.0",
    "numpy>=2.2.6",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",  # NOT opencv-python-headless - GUI support required
    "pymysql>=1.1.2",
]
